--- a/package.json
+++ b/package.json
@@ -46,12 +46,12 @@
     "npm-run-all": "^4.1.2",
     "prettier": "^1.10.2",
     "prismjs": "^1.5.1",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-frame-aware-selection-plugin": "^1.0.0",
-    "react-frame-component": "^1.1.1",
+    "react": "16.3.2",
+    "react-dom": "16.3.2",
+    "react-frame-aware-selection-plugin": "2.0.2",
+    "react-frame-component": "github:OpenGov/react-frame-component#v16",
     "react-hot-loader": "^3.1.3",
-    "react-portal": "^3.1.0",
+    "react-portal": "3.1.0",
     "react-router": "^2.5.1",
     "react-router-dom": "^4.1.1",
     "read-metadata": "^1.0.0",
